--- a/inventario/templates/inventario/modelo/lista.html
+++ b/inventario/templates/inventario/modelo/lista.html
@@ -2,6 +2,11 @@
 
 {% block title %}Lista Modelos{% endblock %}
 
+{% block head %}
+    <link href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css" rel="stylesheet">
+    <link href="https://cdn.datatables.net/1.10.16/css/dataTables.bootstrap4.min.css" rel="stylesheet">
+{% endblock %}
+
 {% block content %}
     <div class="row">
         <div class="col-sm-12 col-md-6 offset-md-3">
@@ -10,13 +15,20 @@
                     <h4 class="card-title">Listado de Modelos</h4>
                     <p class="card-text"><a class="btn btn-primary" href="{% url 'inventario:crear-modelo' %}"><i
                             class="fa fa-edit"></i> Registrar</a></p>
-                    <table class="table">
+                    <table class="table" id="enhance">
+                        <thead>
+                        <tr>
+                            <th>Nombre</th>
+                            <th>Opciones</th>
+                        </tr>
+                        </thead>
                         {% if modelos %}
                             <tbody>
                             {% for modelo in modelos %}
                                 <tr>
                                     <td>{{ modelo }}</td>
-                                    <td><a href="{% url 'inventario:modelo-detalle' modelo.pk %}" class="btn btn-primary btn-sm"><i class="fa fa-edit"></i> </a>
+                                    <td><a href="{% url 'inventario:modelo-detalle' modelo.pk %}"
+                                           class="btn btn-primary btn-sm"><i class="fa fa-edit"></i> Editar</a>
                                         {% if modelo.url %}
                                             <a href="#" class="btn btn-primary btn-sm"><i class="fas fa-link"></i>
                                                 Modelo </a>
@@ -34,4 +46,14 @@
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block javascript %}
+    <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap4.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $("#enhance").DataTable();
+        });
+    </script>
 {% endblock %}
