--- a/estudiantes/templates/estudiantes/anteproyecto/pendiente.html
+++ b/estudiantes/templates/estudiantes/anteproyecto/pendiente.html
@@ -11,7 +11,7 @@
     <div class="col-md-8 offset-md-2 col-sm-12">
         <div class="card">
             <div class="card-body">
-                <div class="card-title"><h4>Anteproyectos</h4>
+                <div class="card-title"><h4>Anteproyectos Pendientes</h4>
                     <hr/>
                     <div class="card-text">
                         {% include 'estudiantes/anteproyecto/include/tabla.html' %}
