--- a/inventario/templates/inventario/fabricante/lista.html
+++ b/inventario/templates/inventario/fabricante/lista.html
@@ -2,6 +2,13 @@
 
 {% block title %}Lista Fabricantes{% endblock %}
 
+{% block head %}
+    <link href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css" rel="stylesheet">
+    <link href="https://cdn.datatables.net/1.10.16/css/dataTables.bootstrap4.min.css" rel="stylesheet">
+{% endblock %}
+
+
+
 {% block content %}
     <div class="row">
         <div class="col-sm-12 col-md-6 offset-md-3">
@@ -12,24 +19,28 @@
                            class="btn btn-sm btn-primary"><i class="fa fa-edit"></i> Registrar</a>
                     </p>
                     <h4 class="card-title">Listado de Fabricantes</h4>
-                    <table class="table">
+                    <table class="table" id="enhance">
                         {% if fabricantes %}
                             <thead>
                             <tr>
                                 <td>Nombre del Fabricante</td>
+                                <td>Opciones</td>
                             </tr>
                             </thead>
                             <tbody>
                             {% for fabricante in fabricantes %}
                                 <tr>
                                     <td>{{ fabricante.nombre }}</td>
-                                    <td><a href="#" class="btn btn-primary btn-sm"><i class="fa fa-edit"></i> Editar</a>
-                                        {% if fabricante.url %}
-                                            <a href="#" class="btn btn-link btn-sm"><i class="fas fa-link"></i>
-                                                Fabricante </a>
-                                        {% else %}
-                                            <a href="#" class="btn disabled"><i class="fas fa-link"></i> Fabricante</a>
-                                        {% endif %}
+                                    <td>
+                                        <div class="btn-group">
+                                            <a href="#" class="btn btn-primary btn-sm"><i class="fa fa-edit"></i> Editar</a>
+                                            {% if fabricante.url %}
+                                                <a href="#" class="btn btn-link btn-sm"><i class="fas fa-link"></i>
+                                                    Fabricante </a>
+                                            {% else %}
+                                                <a href="#" class="btn disabled"><i class="fas fa-link"></i> Fabricante</a>
+                                            {% endif %}
+                                        </div>
                                     </td>
                                 </tr>
                             {% endfor %}
@@ -42,4 +53,14 @@
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block javascript %}
+    <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap4.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $("#enhance").DataTable();
+        });
+    </script>
 {% endblock %}
