--- a/templates/includes/header/partial_admin_utils_dropdown.html
+++ b/templates/includes/header/partial_admin_utils_dropdown.html
@@ -5,13 +5,17 @@
         Utilidades <i class="fas fa-wrench"></i>
     </a>
     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <a class="dropdown-item" href="/admin/">Admin</a>
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#"><b>Inventario</b></a>
-        <a class="dropdown-item" href="{% url 'inventario:fabricante-lista' %}">Fabricantes</a>
-        <a class="dropdown-item" href="{% url 'inventario:categoria-lista' %}">Categorias</a>
-        <a class="dropdown-item" href="{% url 'inventario:modelo-lista' %}">Modelos</a>
-        <a class="dropdown-item" href="{% url 'inventario:lista-aulas' %}">Aulas</a>
-        <a class="dropdown-item" href="{% url 'inventario:lista-equipo' %}">Equipos</a>
+        {% if request.user.is_superuser %}
+            <a class="dropdown-item" href="/admin/">Admin</a>
+        {% endif %}
+        {% if perms.inventario.add_equipo %}
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#"><b>Inventario</b></a>
+            <a class="dropdown-item" href="{% url 'inventario:fabricante-lista' %}">Fabricantes</a>
+            <a class="dropdown-item" href="{% url 'inventario:categoria-lista' %}">Categorias</a>
+            <a class="dropdown-item" href="{% url 'inventario:modelo-lista' %}">Modelos</a>
+            <a class="dropdown-item" href="{% url 'inventario:lista-aulas' %}">Aulas</a>
+            <a class="dropdown-item" href="{% url 'inventario:lista-equipo' %}">Equipos</a>
+        {% endif %}
     </div>
 </li>
