--- a/estudiantes/templates/estudiantes/anteproyecto/include/tabla.html
+++ b/estudiantes/templates/estudiantes/anteproyecto/include/tabla.html
@@ -18,7 +18,7 @@
                         {# Editar #}<a class="btn btn-outline-info"
                                        href="{% url 'estudiante:editar-anteproyecto' anteproyecto.pk %}"> Editar</a>
                         {# Rechazar #}<a href=# class="btn btn-outline-danger"> Rechazar</a>
-                        {# Aprobar #}<a href="#" class="btn-outline-success">Aprobar</a>
+                        {# Aprobar #}<a href="#" class="btn btn-outline-success">Aprobar</a>
                     </div>
                 </td>
             </tr>
