--- a/estudiantes/templates/estudiantes/anteproyecto/lista.html
+++ b/estudiantes/templates/estudiantes/anteproyecto/lista.html
@@ -14,6 +14,7 @@
                 <div class="card-title"><h4>Anteproyectos</h4>
                     <hr/>
                     <div class="card-text">
+                        <p><a class="btn btn-outline-primary" href="{% url 'estudiante:crear-anteproyecto' %}"> Registrar Anteproyecto</a></p>
                         {% include 'estudiantes/anteproyecto/include/tabla.html' %}
                     </div>
                 </div>
