--- a/estudiantes/templates/estudiantes/consultar.html
+++ b/estudiantes/templates/estudiantes/consultar.html
@@ -1,58 +1,37 @@
 {% extends 'base.html' %}
-{% load widget_tweaks %}
+
+{% block head %}
+    <link href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css" rel="stylesheet">
+    <link href="https://cdn.datatables.net/1.10.16/css/dataTables.bootstrap4.min.css" rel="stylesheet">
+{% endblock %}
+
 
 {% block title %}Consultar - Estudiante{% endblock %}
 {% block content %}
-    <div class="row">
-        <div class="col-md-12">
-            <div class="card">
-                <div class="card-body">
-                    <h4 class="card-title">Busqueda de Estudiante </h4>
-                    <div class="container">
-                        <form>
-                            <div class="form-row">
-                                <div class="col">{% render_field filter.form.provincia class="form-control" placeholder="Provincia" %}</div>
-                                <div class="col">{% render_field filter.form.clase class="form-control" placeholder="Clase" %}</div>
-                                <div class="col">{% render_field filter.form.tomo class="form-control" placeholder="Tomo" %}</div>
-                                <div class="col">{% render_field filter.form.folio class="form-control" placeholder="Folio" %}</div>
-                                <button type="submit" class="btn btn-primary"><i class="fa fa-search"
-                                                                                 aria-hidden="true"></i> Buscar
-                                </button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <div class="row top-buffer">
         <div class="col-md-12">
             <div class="card">
                 <div class="card-body">
                     <h4 class="card-title">Listado de Estudiantes</h4>
-                    <table class="table table-bordered">
+                    <table class="table table-bordered" id="estudiantes">
                         <thead>
                         <tr>
-                            <th scope="col">Provincia</th>
-                            <th scope="col">Clase</th>
-                            <th scope="col">Tomo</th>
-                            <th scope="col">Folio</th>
+                            <th>Cedula</th>
                             <th scope="col">Nombre del Estudiante</th>
                             <th scope="col">Carrera</th>
+                            <th>Opciones</th>
                         </tr>
                         </thead>
                         <tbody>
-                        {% for estudiante in filter.qs %}
+                        {% for estudiante in estudiantes %}
                             <tr>
-                                <td>{{ estudiante.provincia }}</td>
-                                <td>{{ estudiante.clase }}</td>
-                                <td>{{ estudiante.tomo }}</td>
-                                <td>{{ estudiante.folio }}</td>
+                                <td>{{ estudiante.provincia }}-{{ estudiante.clase }}-{{ estudiante.tomo }}-{{ estudiante.folio }}</td>
                                 <td>{{ estudiante.primer_apellido|title }}, {{ estudiante.primer_nombre|title }}</td>
                                 <td>{{ estudiante.carrera.carrera.nombre|title }}</td>
-                                <td><a href="{{ estudiante.get_absolute_url }}" class="btn btn-sm btn-link"><i class="fa fa-search"></i></a>
-                                    <a href="{% url 'estudiante:editar' estudiante.pk %}" class="btn btn-sm btn-light"><i class="fa fa-edit"></i></a></td>
+                                <td><a href="{{ estudiante.get_absolute_url }}" class="btn btn-sm btn-link"><i
+                                        class="fa fa-search"></i> Ver</a>
+                                    <a href="{% url 'estudiante:editar' estudiante.pk %}"
+                                       class="btn btn-sm btn-light"><i class="fa fa-edit"></i> Editar</a></td>
                             </tr>
                         {% endfor %}
                         </tbody>
@@ -61,4 +40,14 @@
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block javascript %}
+    <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap4.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('#estudiantes').DataTable();
+        });
+    </script>
 {% endblock %}
