--- a/solicitud/templates/solicitud/lista.html
+++ b/solicitud/templates/solicitud/lista.html
@@ -13,9 +13,13 @@
         <div class="col-8 offset-2 col-xs-12">
             <div class="card">
                 <div class="card-body">
-                    <div class="card-title"><h4>Solicitudes Pendientes</h4>
+                    <div class="card-title"><h4>Solicitudes</h4>
                     </div>
                     <div class="card-body">
+                        <div class="btn-group">
+                            <a class="btn btn-outline-info" href="{% url 'solicitud:crear' %}"> Crear Solicitud</a>
+                        </div>
+                        <hr>
                         <table class="table table-bordered" id="solicitudes">
                             <thead>
                             <tr>
@@ -29,7 +33,7 @@
                             <tbody>
                             {% for solicitud in solicitudes %}
                                 <tr>
-                                    <td>{{ solicitud.usuario.get_full_name }}</td>
+                                    <td>{{ solicitud.usuario }}</td>
                                     <td>{{ solicitud.titulo }}</td>
                                     <td>{{ solicitud.fecha_creacion }}</td>
                                     <td>{{ solicitud.fecha_modificacion }}</td>
