--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,7 @@
                     {% include 'includes/header/partial_admin_utils_dropdown.html' %}
                 {% endif %}
 
-                {% if request.user.perfil.unidad %}
+                {% if request.user.perfil.facultad %}
                     {% include 'includes/header/partial_unidad_dropdown.html' %}
                 {% endif %}
 
