--- a/perfiles/templates/perfiles/editar.html
+++ b/perfiles/templates/perfiles/editar.html
@@ -102,6 +102,8 @@
                                             {{ form.cod_facultad.errors }}{{ form.cod_facultad }}</div>
                                         <div class="form-group col-md-4">{{ form.cod_escuela.label_tag }}
                                             {{ form.cod_escuela.errors }}{{ form.cod_escuela }}</div>
+                                        <div class="form-group col-md-4">{{ form.cod_departamento.label_tag }}
+                                            {{ form.cod_departamento.errors }}{{ form.cod_departamento }}</div>
                                     </div>
                                     <hr/>
                                     <button type="submit" class="btn btn-primary"><i class="far fa-save"></i> Guardar
