--- a/estudiantes/templates/estudiantes/anteproyecto/lista.html
+++ b/estudiantes/templates/estudiantes/anteproyecto/lista.html
@@ -14,7 +14,9 @@
                 <div class="card-title"><h4>Anteproyectos</h4>
                     <hr/>
                     <div class="card-text">
-                        <p><a class="btn btn-outline-primary" href="{% url 'estudiante:crear-anteproyecto' %}"> Registrar Anteproyecto</a></p>
+                        {% if perms.estudiantes.add_anteproyecto %}
+                            <p><a class="btn btn-outline-primary" href="{% url 'estudiante:crear-anteproyecto' %}">
+                                Registrar Anteproyecto</a></p>{% endif %}
                         {% include 'estudiantes/anteproyecto/include/tabla.html' %}
                     </div>
                 </div>
